...
        android:title="Home" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_inbox_mail"
        android:title="Inbox" />
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="Favorites" />
    <item
        android:id="@+id/nav_admin_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="Admin" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Profile" />
...
